Random forest hyperparameter tuning

--- a/Credit_card_fraud_detection.ipynb
+++ b/Credit_card_fraud_detection.ipynb
@@ -1119,6 +1119,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "param_grid = {'max_depth':[3, None], 'min_samples_split':[2, 3, 10], \n",
+    "              'min_samples_leaf':[1, 3, 10], 'bootstrap':[True, False], \n",
+    "              'criterion':[\"gini\", \"entropy\"]}\n",
+    "\n",
+    "rand_frst_clf = RandomForestClassifier(random_state=42, n_estimators=1000)\n",
+    "\n",
+    "grid_rand_forest = GridSearchCV(rand_frst_clf, param_grid, scoring=\"accuracy\", n_jobs=-1,\n",
+    "                                verbose=1, cv=3, iid=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 72 candidates, totalling 216 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid_rand_forest.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = grid_rand_forest.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(confusion_matrix(y_test, y_pred.round()))\n",
+    "print(accuracy_score(y_test, y_pred.round()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Deep Learning"
    ]
   },
