--- a/Credit_card_fraud_detection.ipynb
+++ b/Credit_card_fraud_detection.ipynb
@@ -1477,7 +1477,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1744,45 +1746,6 @@
    "source": [
     "y_train_pred = model.predict(X_train)\n",
     "y_test_pred = model.predict(X_test)\n",
-    "\n",
-    "print_score(y_train, y_train_pred.round(), train=True)\n",
-    "print_score(y_test, y_test_pred.round(), train=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# XGBoost Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-8deeae5910fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m                           \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                           base_score=0.99)\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mxgb_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0my_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from xgboost import XGBClassifier\n",
-    "\n",
-    "xgb_model = XGBClassifier(n_estimators=500, \n",
-    "                          learning_rate=0.1, \n",
-    "                          base_score=0.99)\n",
-    "xgb_model.fit(X_train, y_train)\n",
-    "\n",
-    "y_train_pred = xgb_model.predict(X_train)\n",
-    "y_test_pred = xgb_model.predict(X_test)\n",
     "\n",
     "print_score(y_train, y_train_pred.round(), train=True)\n",
     "print_score(y_test, y_test_pred.round(), train=False)"
@@ -2605,7 +2568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
